# health-agent

./: README.md
fitness-agent/: .env.example  .gitignore  HELP.md  package-lock.json  package.json
fitness-agent/agent/: pyproject.toml
fitness-agent/agent/app/: agents.py  config.py  llm.py  main.py  models.py  session_store.py  tool_gateway.py  trace_logger.py
fitness-agent/agent/tests/: test_remediation_p0_p2.py
fitness-agent/backend/: package.json  tsconfig.build.json  tsconfig.json
fitness-agent/backend/prisma/: TEAM_DB_WORKFLOW.md  schema.prisma  seed.mjs
fitness-agent/backend/src/: app.module.ts  main.ts
fitness-agent/backend/test/: agent-contract.test.ts  phase1.test.ts  phase2-e2e.test.ts  phase3-memory.test.ts  phase3-outcome.test.ts  phase3-policy.test.ts  phase3-strategy.test.ts  phase4-product-events.test.ts  phase4-quality.test.ts  phase4-revision.test.ts  phase4-work-items.test.ts
fitness-agent/docs/: agent-intelligence-remediation-plan.md  agent-phase4-plan.md
fitness-agent/frontend/: next.config.js  package.json
fitness-agent/frontend/app/: globals.css  layout.tsx  page.tsx
fitness-agent/frontend/components/: activity-rings.tsx  agent-run-timeline.tsx  app-shell.tsx  auth-experience.tsx  cards.tsx  coach-workspace-panel.tsx  dashboard-coaching-panel.tsx  diet-food-art.tsx  diet-plate-card.tsx  diet-recommendation-modal.tsx  exercise-library-search.tsx  plan-checklist.tsx
fitness-agent/frontend/lib/: access-token.ts  agent-thread.ts  api.ts  auth.ts  env.ts  (+5 more)
health-agent/frontend/: .eslintrc.json  package.json  tsconfig.json
(+70 files in other folders)
