[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "health-agent-service"
version = "0.1.0"
description = "Agent runtime for Health Agent"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.34,<1.0",
  "httpx>=0.28,<1.0",
  "openai>=1.68,<2.0",
  "pydantic>=2.10,<3.0",
  "python-dotenv>=1.0,<2.0"
]

[tool.setuptools.packages.find]
where = ["."]
